--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -38,6 +39,7 @@
                 700: '#334155',
                 800: '#1e293b',
                 900: '#0f172a',
+                950: '#020617',
               }
             },
             fontFamily: {
@@ -55,9 +57,15 @@
       ::-webkit-scrollbar-track {
         background: #f1f1f1; 
       }
+      .dark ::-webkit-scrollbar-track {
+        background: #1e293b;
+      }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1; 
         border-radius: 4px;
+      }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #475569;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
@@ -75,7 +83,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-900 font-sans antialiased">
+  <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-50 font-sans antialiased transition-colors duration-300">
     <div id="root"></div>
   </body>
 </html>
