--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
         darkMode: 'class',
         theme: {
           extend: {
+            animation: {
+                'spin-slow': 'spin 3s linear infinite',
+                'fade-in': 'fadeIn 0.5s ease-out forwards',
+                'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
+                'progress-loading': 'progress 1.5s ease-in-out infinite',
+            },
+            keyframes: {
+                fadeIn: {
+                    '0%': { opacity: '0' },
+                    '100%': { opacity: '1' },
+                },
+                fadeInUp: {
+                    '0%': { opacity: '0', transform: 'translateY(10px)' },
+                    '100%': { opacity: '1', transform: 'translateY(0)' },
+                },
+                progress: {
+                    '0%': { transform: 'translateX(-100%)' },
+                    '100%': { transform: 'translateX(100%)' },
+                }
+            },
             colors: {
               primary: {
                 50: '#f0fdf4',
